--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div id="barEmp"></div>
     <div class="analysis-box" id="summary-analysis">
       <b>From 2020–2024, data reveals:</b><br>
-      📘 Lowest Enrollment: <b>Diploma Kejuruteraan Mekanikal (Rekabentuk Produk)</b> — 22.04%<br>
-      📗 Highest Enrollment: <b>Diploma Kejuruteraan Elektronik (Perubatan)</b> — 116%<br>
-      📕 Lowest Employability: <b>Diploma Kejuruteraan Elektrik & Instrumentasi</b> — 39%<br>
-      📙 Highest Employability: <b>Diploma Kejuruteraan Mekanikal (Pertanian)</b> — 98.92%
+      - Lowest Enrollment: <b>Diploma Kejuruteraan Mekanikal (Rekabentuk Produk)</b> — 22.04%<br>
+      - Highest Enrollment: <b>Diploma Kejuruteraan Elektronik (Perubatan)</b> — 116%<br>
+      - Lowest Employability: <b>Diploma Kejuruteraan Elektrik & Instrumentasi</b> — 39%<br>
+      - Highest Employability: <b>Diploma Kejuruteraan Mekanikal (Pertanian)</b> — 98.92%
     </div>
   </div>
 
@@ -197,4 +197,5 @@ Plotly.d3.csv("merged_data.csv", function(raw){
 </script>
 </body>
 </html>
+
 
